src/features/home/styles/_header.module.scss
@import "theme/constants.module.scss";
@import "theme/mixins.scss";

//------- MEDIA QUERIES ---------

//------- MOBILE

@media screen and (min-width: $media-query-mobile) {
  .header-items {
    @include fontSize-mobile-tiny;
    padding-top: $padding-homeContainerPadding-mobile;
    padding-bottom: $padding-homeContainerPadding-mobile;
  }
}

//------- DESKTOP

@media screen and (min-width: $media-query-desktop) {
  .header-items {
    @include fontSize-desktop-tiny;
    padding-top: $padding-homeContainerPadding-desktop;
    padding-bottom: $padding-homeContainerPadding-desktop;
  }
}

.header-items {
  z-index: 100;
  color: $color-primary-bark;
  position: fixed;
  gap: 3.5em;
  background-color: $color-primary-cream;
  width: 100%;

  justify-content: flex-end;
  display: flex;

  ul {
    margin: 0px;
  }

  li {
    list-style: none;
    font-weight: 900;
  }
}

.header-items ul li:nth-child(1) {
  padding-bottom: 6%;
}

.header-items ul:nth-child(4) {
  padding-right: 10em;
}

.mobile-header {
  position: fixed;
  right: 3em;
  top: 2.1em;
  display: flex;
  gap: 1.25em;
  flex-direction: column;
}

.mobile-menu-line {
  list-style: none;
  width: 60px;
  border-bottom: 1.5px solid $color-primary-bark;
}

// ------- MOBILE BUTTON

.mobile-header-container {
  width: 100%;
  height: $header-height;
  position: fixed;

  z-index: 1000;
  background-color: $color-primary-cream;
}

.mobile-header-button {
  width: 75px;
  height: 45px;
  position: fixed;
  right: 2em;
  top: 0em;
  margin: 50px auto;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.5s ease-in-out;
  -moz-transition: 0.5s ease-in-out;
  -o-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
  cursor: pointer;
}

.mobile-header-button span {
  display: block;
  position: fixed;
  height: 1.5px;
  width: 100%;
  background: $color-primary-bark;
  border-radius: 2px;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  -moz-transition: 0.25s ease-in-out;
  -o-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.mobile-header-button span:nth-child(1) {
  top: 0px;
}

.mobile-header-button span:nth-child(2),
.mobile-header-button span:nth-child(3) {
  top: 27px;
}

.mobile-header-button span:nth-child(4) {
  top: 50px;
}

.mobile-header-button.open span:nth-child(1) {
  top: 27px;
  width: 0%;
  left: 50%;
}

.mobile-header-button.open span:nth-child(2) {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}

.mobile-header-button.open span:nth-child(3) {
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.mobile-header-button.open span:nth-child(4) {
  top: 27px;
  width: 0%;
  left: 50%;
}

.mobile-header-list {
  top: $header-height;
  background-color: $color-primary-cream;
  width: 100%;
  position: fixed;
  z-index: 1000;
  height: 100vh;

  ul {
    color: $color-primary-bark;
    list-style: none;
  }
}

.header-mobile-list-medium-font {
  @include fontSize-mobile-medium;
}

.header-mobile-list-small-font {
  @include fontSize-mobile-small;
}

.mobile-header-line-break-top {
  margin-top: 5.5em;
  margin-bottom: 1.5em;
  border-bottom: 1.5px solid $color-primary-bark;
  width: 95%;
}

.mobile-header-line-break-bottom {
  margin-top: 2em;
  border-bottom: 1.5px solid $color-primary-bark;
  width: 95%;
}

.header-mobile-title {
  font-size: $fontSize-desktop-small + 9px;
  margin-top: 1.5em;
  margin-bottom: 0.9em;
}

.header-mobile-title-empty-title-row {
  margin-top: 1em;
}

.txo-logo {
  height: 5em;
  width: 10.5em;
  left: 1.9em;
  position: absolute;
  top: 2.4em;
}

